<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Hotelaide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">2274737566777252</string>
    <string name="fb_login_protocol_scheme">fb2274775673160777252</string>
    <string name="fabric_api_key">jhwdvbweilfhuihdq</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_invalid">This field is invalid</string>
    <string name="error_500">Server Error, Please try again later</string>
    <string name="error_connection">Please check your internet connection</string>
    <string name="error_unknown">Oops! something went wrong, Please try again later</string>
    <string name="error_memory">Your device ran out of memory, Please close other running apps in the background and try again</string>
    <string name="error_location_fetch">Unable to fetch your current location</string>
    <string name="error_fav">Unable to add to favourites, Please try again later</string>
    <string name="error_call">No Number available to call, please try again later</string>
    <string name="error_app_not_installed">This app has not been installed</string>
    <string name="log_exception">EXCEPTION:&#160;</string>
    <string name="log_response">RESPONSE:&#160;</string>
    <string name="log_response_length">RESPONSE LENGTH:&#160;</string>
    <string name="about1">EatOut is an online and mobile platform that puts the local dining scene in the palm of your hand. Our web and mobile apps enable users to browse, discover and get access to discounts and offers at hundreds of restaurants in the East Africa. In the mood for Japanese? We’ll show you the closest Sushi place. Users can search for restaurants based on location, cuisine or budget and get comprehensive information including contact details, menus, maps, opening hours, photos, reviews and much more.</string>
    <string name="about2">Since launching in 2015, Yummy Card has become Nairobi’s largest dining club, with a current membership base of over 15,000 members. The program offers an unparalleled, one-of-a-kind marketing strategy for your restaurant; one that has helped restaurants fill seats and build loyalty. Our research shows that over 50% of our members choose to eat out at a Yummy Card restaurant at least once a week. Members have the option of using their physical cards or displaying a digital version on the EatOut App. Discounts apply on the entire bill and at all times, however cannot be used at the same time as another offer. Some restaurants may exclude holidays and celebration days. Order you card today by visiting www.joinyummy.com.</string>
    <string name="about3">Yummy Magazine is the region’s only lifestyle magazine focused on food and drink. With a print run of 12,000 distributed through over 15,000 copies publication launching in 2015, Yummy Card has become Nairobi’s largest dining club, with a current Yummy is Nairobi’s premier urban lifestyle magazine specifically for foodies with 12,000 copies are distributed monthly through over 100 locations (cafes, restaurants, shopping malls) in Nairobi, reaching a broad spectrum individuals with high disposable income, young professionals, corporate executives, decision makers, expats and tourists. Download back issues at www.yummymagaizne.com.</string>
    <string name="about4">Since inception in 2013, the annual Nairobi Restaurant Week has quickly become the most anticipated event in the culinary calendar. Each year the top chefs from 50+ of the best restaurants in Nairobi are invited to create one of a kind, limited edition, prix-fixed menus, in the city’s biggest celebration of food and drink. For a list of this year\'s participants visit www.nairobirestaurantweek.com.</string>
    <string name="about5">The third edition of the bi-annual Taste Bar &amp; Restaurant Awards took place at the dusitD2 Nairobi on September 1st 2015. Restaurant &amp; bar owners, managers, chefs, mixologists and Nairobi’s movers and shakers turned out to celebrate the very best of Kenya’s bar &amp; restaurant industry. For a full list of winners visit www.taste.co.ke.</string>
    <string name="progress_fetch_fb_details">fetching your details from Facebook…please wait…</string>
    <string name="progress_loading_countries">Fetching all countries from the server</string>
    <string name="progress_loading_restaurant_info">Loading Restaurant Information.. Please wait</string>
    <string name="progress_loading_review">Posting your review, please wait…</string>
    <string name="progress_loading_claim_offer">Redeeming your offer, please wait…</string>
    <string name="progress_loading_claim_offer_status">Checking offer status, please wait…</string>
    <string name="progress_loading_calculate_disc">Calculating your discount, please wait…</string>
    <string name="progress_loading_account_update">Updating your account. Please wait…</string>
    <string name="progress_loading_mpesa_request">Requesting for Mpesa Pin Prompt, Please wait..</string>
    <string name="progress_loading_get_location">Fetching your current location, Please wait…</string>
    <string name="progress_validate_reservation">Validating reservation for the set Date and Time, Please wait…</string>
    <string name="progress_making_reservation">Making your reservation, Please wait…</string>
    <string name="et_hint_first_name">First Name</string>
    <string name="et_hint_last_name">Last Name</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_search_here">Search here…</string>
    <string name="et_hint_phone">Phone Number</string>
    <string name="et_hint_dob">Date Of Birth (YYYY-MM-DD)</string>
    <string name="et_hint_amount">Enter Amount</string>
    <string name="txt_login">LOG IN</string>
    <string name="txt_share">SHARE</string>
    <string name="txt_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="txt_continue">CONTINUE</string>
    <string name="txt_ok">OK</string>
    <string name="txt_enable">ENABLE</string>
    <string name="txt_retry">RETRY</string>
    <string name="txt_view">RESTAURANT</string>
    <string name="txt_loading_please_wait">Loading… please wait…</string>
    <string name="txt_call_now">CALL NOW</string>
    <string name="txt_welcome">Welcome to the EatOut App, Please wait as we set your location to the closest city available…</string>
    <string name="txt_restaurant_description">INFO</string>
    <string name="txt_operating_hours">HOURS</string>
    <string name="txt_to">to</string>
    <string name="txt_mon">Mon:</string>
    <string name="txt_tue">Tue:</string>
    <string name="txt_wed">Wed:</string>
    <string name="txt_thu">Thu:</string>
    <string name="txt_fri">Fri:</string>
    <string name="txt_sat">Sat:</string>
    <string name="txt_sun">Sun:</string>
    <string name="txt_photo_gallery">PHOTOS</string>
    <string name="txt_error_connecting">There seems to be a connection problem, please try again later</string>
    <string name="txt_post_your_review_partial">WIN EATOUT VOUCHERS</string>
    <string name="txt_post_your_review_partial_message">Submit your rating below and stand a chance to win EatOut restaurant vouchers and other prizes</string>
    <string name="txt_post">POST</string>
    <string name="txt_explore_restaurants">Explore Restaurants</string>
    <string name="txt_explore_nearby">EXPLORE NEARBY</string>
    <string name="txt_back">BACK</string>
    <string name="txt_terms_payment_title">Terms &amp; Conditions</string>
    <string name="txt_terms_payment_more">More terms and conditions</string>
    <string name="txt_terms_payment_body">Offer subject to change at anytime and is based on the individual restaurants terms and conditions</string>
    <string name="txt_terms">By signing up you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="txt_policy">By tapping on \'Log In\', you agree to our terms and conditions and our Privacy Policy</string>
    <string name="txt_update_details">UPDATE</string>
    <string name="txt_points">YUMMY POINTS</string>
    <string name="txt_eatout_site_and_apps">EatOut Site and Apps</string>
    <string name="txt_yummy_card">Yummy Card</string>
    <string name="txt_yummy_magazine">Yummy Magazine</string>
    <string name="txt_nairobi_restaurant_week">Nairobi Restaurant Week</string>
    <string name="txt_taste_awards">Taste Awards</string>
    <string name="txt_app_version">App Version</string>
    <string name="txt_no_gallery_images">No Gallery Images</string>
    <string name="txt_no_favourites">No Restaurants Liked</string>
    <string name="txt_no_favourites2">Why not search for some</string>
    <string name="txt_no_restaurants">Oops! No restaurants found</string>
    <string name="txt_no_reviews">No Reviews posted yet, Be the first to post something</string>
    <string name="txt_no_reservations">No Reservations created</string>
    <string name="txt_no_reservations2">Why not search for restaurants that have that feature</string>
    <string name="txt_payment_discount">Yay! MPESA customers automatically qualify for a discount when paying through EatOut Enter the total bill amount below</string>
    <string name="txt_confirm_mpesa_tel">Please confirm your MPESA telephone number below and click continue</string>
    <string name="txt_bill">BILL</string>
    <string name="txt_discount">DISCOUNT</string>
    <string name="txt_revised_bill">REVISED BILL</string>
    <string name="txt_open_bracket">&#160;(</string>
    <string name="txt_closed_bracket">)&#160;</string>
    <string name="txt_add_review">Rate to win EatOut Vouchers</string>
    <string name="txt_card_title">Card Title</string>
    <string name="txt_confirmation_code">Confirmation Code</string>
    <string name="txt_find_restaurants">Find the Best Restaurants in Town</string>
    <string name="txt_discounts_offers"><![CDATA[Discounts & Offers]]></string>
    <string name="txt_saving">Instant savings with your digital Card</string>
    <string name="txt_nearby">Nearby</string>
    <string name="txt_restaurants_nearby">Check out restaurants near you</string>
    <string name="txt_favorites">Favorites</string>
    <string name="txt_favourites_desc">Directly access your most loved Places</string>
    <string name="txt_closed">Closed</string>
    <string name="txt_read_reviews">Read Reviews</string>
    <string name="txt_reviews">REVIEWS</string>
    <string name="txt_location_title">LOCATION SERVICES</string>
    <string name="txt_locations_permission">EatOut needs to access your location but your GPS seems to be disabled. You must enable it to proceed</string>
    <string name="txt_srch_rating">Rating</string>
    <string name="txt_srch_featured">Featured</string>
    <string name="txt_srch_a_z">A-Z</string>
    <string name="txt_version">Version:&#160;</string>
    <string name="txt_old_version_title">Old Version</string>
    <string name="txt_old_version_desc">Seems like you are using an old version of the app, Please update the app from the playstore to get access to new features</string>
    <string name="txt_update_now">UPDATE NOW</string>
    <string name="txt_later">LATER</string>
    <string name="txt_restaurant_no_offer">This restaurant has no offers. Please consider any of the following restaurants in the neighbourhood</string>
    <string name="txt_search">Search</string>
    <string name="txt_search_all">All</string>
    <string name="txt_area">Area</string>
    <string name="txt_city">City</string>
    <string name="txt_cuisine">Cuisine</string>
    <string name="txt_type">Type</string>
    <string name="txt_validate">VALIDATE</string>
    <string name="txt_address">ADDRESS</string>
    <string name="txt_proceed">PROCEED</string>
    <string name="txt_skip">SKIP</string>
</resources>