<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="35dp">

            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_eatout_site_and_apps" />

            <TextView
                style="@style/Text_Normal"
                android:gravity="start"
                android:text="@string/about1" />

            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_yummy_card" />

            <TextView
                style="@style/Text_Normal"
                android:gravity="start"
                android:text="@string/about2" />

            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_yummy_magazine" />

            <TextView
                style="@style/Text_Normal"
                android:gravity="start"
                android:text="@string/about3" />

            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_nairobi_restaurant_week" />

            <TextView
                style="@style/Text_Normal"
                android:gravity="start"
                android:text="@string/about4" />

            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_taste_awards" />

            <TextView
                style="@style/Text_Normal"
                android:gravity="start"
                android:text="@string/about5" />


            <TextView
                style="@style/Header_Text"
                android:gravity="start"
                android:textColor="@color/colorPrimary"
                android:text="@string/txt_app_version" />

            <TextView
                android:id="@+id/version_number"
                style="@style/Text_Normal"
                android:gravity="start"
                android:layout_gravity="start"/>


        </LinearLayout>

    </ScrollView>