<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/LL_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/login_activity_padding"
        android:layout_margin="@dimen/general_padding"
        android:background="@drawable/bckgrd_text_fields_square"
        android:visibility="visible">

        <TextView
            style="@style/Text_Normal"
            android:layout_margin="@dimen/general_padding"
            android:text="@string/txt_welcome" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/locating_user" />

        <TextView
            android:id="@+id/txtSkip"
            style="@style/Button_Yes"
            android:text="@string/txt_skip" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/login_activity_padding"
        android:layout_margin="@dimen/general_padding"
        android:background="@drawable/bckgrd_text_fields_square"
        android:visibility="visible">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/country_flag"
            android:layout_width="@dimen/my_account_profile_pic"
            android:layout_height="@dimen/my_account_profile_pic"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:scaleType="centerCrop"
            app:riv_border_width="0dp"
            app:riv_corner_radius="8dp"
            android:layout_marginBottom="@dimen/login_activity_padding"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/txtMessage"
            style="@style/Text_Normal"
            android:paddingTop="@dimen/general_padding"
            android:text="@string/app_name"
            android:paddingBottom="@dimen/login_activity_padding"
            android:textSize="@dimen/text_size_medium" />

        <TextView
            android:id="@+id/txtOk"
            style="@style/Button_Yes"
            android:text="@string/txt_proceed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_no_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/login_activity_padding"
        android:layout_margin="@dimen/general_padding"
        android:background="@drawable/bckgrd_text_fields_square"
        android:visibility="visible">

        <TextView
            style="@style/Header_Text"
            android:paddingBottom="@dimen/login_activity_padding"
            android:text="@string/txt_location_title" />

        <TextView
            style="@style/Text_Normal"
            android:text="@string/error_location_fetch"
            android:textSize="@dimen/text_size_medium"
            android:paddingBottom="@dimen/login_activity_padding"/>

        <TextView
            style="@style/Button_Yes"
            android:onClick="retryFetchLocation"
            android:text="@string/txt_retry" />

    </LinearLayout>

</RelativeLayout>



