<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_activity_padding">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/Header_Text"
            android:text="@string/txt_post_your_review_partial"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_padding"
            android:orientation="vertical">

            <TextView
                style="@style/Text_Normal"
                android:layout_width="match_parent"
                android:text="@string/txt_post_your_review_partial_message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_padding"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/general_padding"
                    android:max="5"
                    android:numStars="5"
                    android:progressDrawable="@drawable/rating_yellow_review"
                    android:stepSize="0.5" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/app_name"
        android:src="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtBack"
            style="@style/Text_Normal"
            android:layout_weight="1"
            android:text="@string/txt_back"
            android:textColor="@color/blue" />

        <ImageView
            android:id="@+id/btn_separator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@color/blue" />

        <TextView
            android:id="@+id/txtOk"
            style="@style/Text_Normal"
            android:layout_weight="1"
            android:text="@string/txt_post"
            android:textColor="@color/blue" />

    </LinearLayout>

</LinearLayout>