<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/general_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/login_activity_padding"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:tint="@color/colorPrimary"
            android:layout_height="@dimen/hiw_image_size" />

        <TextView
            android:id="@+id/description"
            style="@style/Text_Normal"
            android:layout_marginTop="@dimen/login_activity_padding"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/txt_explore_restaurants" />

    </LinearLayout>


    <TextView
        android:id="@+id/button"
        android:onClick="EXPLORE"
        style="@style/Button_Yes"
        android:layout_above="@+id/bottom_button"
        android:text="@string/txt_explore_restaurants" />

    <TextView
        android:id="@+id/bottom_button"
        style="@style/Button_Yes"
        android:onClick="EXPLORE_NEARBY"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_explore_nearby" />

</RelativeLayout>