<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_collapseMode="pin"
    app:layout_scrollFlags="scroll|enterAlways">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@color/dark_grey"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey"
            android:orientation="horizontal"
            android:padding="@dimen/general_padding">

            <TextView
                android:id="@+id/search_bar_text"
                style="@style/Edit_Text"
                android:layout_margin="0dp"
                android:gravity="center"
                android:onClick="btnShowSearchScreen" />

            <ImageView
                android:id="@+id/search_bar_icon"
                android:layout_width="@dimen/restaurant_search_icon_height"
                android:layout_height="@dimen/restaurant_search_icon_height"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_search" />

            <ImageView
                android:id="@+id/search_bar_cancel"
                android:layout_width="@dimen/restaurant_search_icon_height"
                android:layout_height="@dimen/restaurant_search_icon_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/general_padding"
                android:layout_marginRight="@dimen/general_padding"
                android:contentDescription="@string/app_name"
                android:tint="@color/grey"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/general_padding"
            android:paddingLeft="@dimen/general_padding"
            android:paddingRight="@dimen/general_padding">

            <TextView
                android:id="@+id/category_nearby"
                style="@style/Button_Search_Left"
                android:layout_weight="1"
                android:onClick="btnCategorize"
                android:text="@string/txt_nearby" />

            <TextView
                android:id="@+id/category_featured"
                style="@style/Button_Search_Middle"
                android:layout_weight="1"
                android:onClick="btnCategorize"
                android:text="@string/txt_srch_featured" />

            <TextView
                android:id="@+id/category_az"
                style="@style/Button_Search_Middle"
                android:layout_weight="1"
                android:onClick="btnCategorize"
                android:text="@string/txt_srch_a_z" />

            <TextView
                android:id="@+id/category_rating"
                style="@style/Button_Search_Right"
                android:layout_weight="1"
                android:onClick="btnCategorize"
                android:text="@string/txt_srch_rating" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

