<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <include layout="@layout/header_my_account_layout" />

            <include layout="@layout/toolbar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dim"
                android:orientation="horizontal"
                android:padding="@dimen/general_padding">

                <TextView
                    style="@style/Text_Normal"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:text="@string/et_hint_phone"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/user_phone"
                    style="@style/Text_Normal"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_padding"
                android:orientation="vertical"
                android:paddingBottom="@dimen/login_activity_padding"
                android:paddingLeft="@dimen/login_activity_padding"
                android:paddingRight="@dimen/login_activity_padding">

                <Spinner
                    android:id="@+id/user_salutation"
                    style="@style/Spinner_Search"
                    android:layout_width="match_parent"
                    android:background="@drawable/bckgrd_text_fields"
                    android:entries="@array/spinner_salutaions" />

                <EditText
                    android:id="@+id/user_first_name"
                    style="@style/Edit_Text"
                    android:hint="@string/et_hint_first_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/user_last_name"
                    style="@style/Edit_Text"
                    android:hint="@string/et_hint_last_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/user_email"
                    style="@style/Edit_Text"
                    android:hint="@string/et_hint_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/user_dob"
                    style="@style/Edit_Text"
                    android:hint="@string/et_hint_dob" />


                <Switch
                    android:id="@+id/switch_notifs"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:layout_margin="@dimen/general_padding"
                    android:textColor="@color/colorAccent"
                    android:text="Notify me about nearby discounts" />


                <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_facebook_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/text_size_normal_margin"
                    android:paddingBottom="15sp"
                    android:paddingTop="15sp"
                    facebook:com_facebook_login_text="Fetch details from Facebook" />

                <TextView
                    style="@style/Button_Yes"
                    android:layout_width="match_parent"
                    android:onClick="updateDetails"
                    android:text="@string/txt_update_details" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>